deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backtrace-prod
  labels:
    name: backtrace-prod
    environment: production
